# table_modifier

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  pyproject.toml
formats/: credit_monitoring_companies.json
src/: __init__.py
src/table_modifier/: cli.py  constants.py  file_status.py  localization.py  signals.py
src/table_modifier/classifier/: __init__.py  detector.py  registry.py  result.py  utils.py
src/table_modifier/config/: __init__.py  setup.py  state.py
src/table_modifier/file_interface/: __init__.py  base.py  csv.py  excel.py  factory.py  protocol.py  utils.py
src/table_modifier/format/: base.py  factory.py  format.schema.json  protocol.py
src/table_modifier/gui/: __init__.py  theme_manager.py
src/table_modifier/processing/: engine.py  transform.py
table_modifier/: __init__.py  constants.py  file_status.py  localizer.py  signals.py
table_modifier/classifier/: __init__.py  check.py  detector.py  registry.py  result.py  utils.py
table_modifier/classifier/check/: base.py  date.py  special.py  string.py
table_modifier/classifier/detectors/: base.py  boolean.py  date.py  duns.py  email.py  hyphenated_integer.py  name.py  numeric.py
table_modifier/config/: __init__.py
table_modifier/config/state/: __init__.py
table_modifier/file_interface/: __init__.py  csv.py  excel.py  factory.py  parquet.py  protocol.py  utils.py
table_modifier/format/: protocol.py
table_modifier/gui/: emitter.py
table_modifier/localization/: en.json
tests/: test_file_status.py
tests/classifier/: test_classification_result.py  test_classifier_engine.py  test_classifier_utils.py  test_date_check.py  test_detectors_boolean.py  test_mixins.py
tests/cli/: test_cli.py
tests/config/: test_state.py
tests/constants/: test_constants.py
tests/core/: test_excepthook_and_run.py  test_localization.py  test_localization_more.py  test_signals.py  test_signals_delay.py  test_signals_more.py
tests/file_interface/: test_csv_extra.py  test_csv_interface.py  test_csv_skiprows_list.py  test_excel_interface.py  test_excel_skiprows_list.py  test_factory_and_utils.py  test_factory_errors_and_utils.py
tests/format/: test_factory_and_base.py  test_protocol.py
tests/gui/: test_map_screen_utils.py  test_theme_manager.py
tests/processing/: test_engine.py  test_engine_coverage.py  test_engine_dedupe.py  test_engine_extras.py  test_engine_helpers.py  test_engine_more.py  test_transform.py
(+39 files in other folders)
