[tool.poetry]
name = "table_modifier"
version = "0.1.0"
description = "A project for modifying tables with GUI and file interface support."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
blinker = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
